<resources>
    <string name="app_name">NoteApp</string>
    <string name="nav_header_name">Quick Note</string>
    <string name="option_menu_title">More</string>
    <string name="option_menu_item_color">Color</string>
    <string name="option_menu_item_label">Label</string>
    <string name="option_menu_item_sort">Sort</string>
    <string name="option_menu_item_view">View</string>
    <string name="option_menu_item_search">Search</string>
    <string name="option_menu_item_delete">Delete</string>
    <string name="option_menu_item_unlock">Unlock</string>
    <string name="option_menu_cancel_remind">Alarm off</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_note">All Note</string>
    <string name="menu_item_remind">Remind</string>
    <string name="menu_item_label">Label</string>
    <string name="menu_item_trash">Trash</string>
    <string name="view_sort_by_modified_time">by modified time</string>
    <string name="view_sort_by_created_time">by created time</string>
    <string name="view_sort_by_alphabetically">alphabetically</string>
    <string name="view_sort_by_color">by color</string>
    <string name="view_sort_by_reminder_time">by reminder time</string>
    <string name="view_by_list">List</string>
    <string name="view_by_detail">Detail</string>
    <string name="view_by_grid">Grid</string>
    <string name="button_add">Add</string>
    <string name="title">Title</string>
    <string name="option_menu_lock">Lock</string>
    <string name="message_delete">Do you want to delete?</string>
    <string name="message_error_save">Please fill the Title</string>
    <string name="message_input_password">Enter password</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_set">Set</string>
    <string name="button_cancel">Cancel</string>
    <string name="message_alarm_off">Delete Reminder?</string>
    <string name="message_confirm_delete">Delete?</string>
    <string name="activity_trash">Trash Can</string>
    <string name="answer_no">no</string>
    <string name="answer_yes">yes</string>
    <string name="question_detele">Do you want to delete Note?</string>
    <string name="question_restore">Do you want to store Note?</string>
    <string name="message_delete_successful">Delete successful</string>
    <string name="message_delete_failure">Delete failure</string>
    <string name="message_restore_successful">Restore successful</string>
    <string name="message_restore_failure">Restore failure</string>
    <string name="option_menu_restore">Restore</string>
    <string name="option_menu_select_all">Select All</string>
    <string name="button_ok">OKE</string>
    <string name="message_wrong">Wrong!</string>
    <string name="channel_name">Notification Reminder</string>
    <string name="text_add_item">add item</string>
    <string name="button_text_note">Text</string>
    <string name="button_to_do_note">To do</string>
    <string name="text_create_note">Create Note</string>
    <string name="button_save">Save</string>
    <string name="dialog_add_to_do">ToDo name</string>
    <string name="option_menu_item_rename">Rename</string>
    <string name="button_new_label">new label</string>
    <string name="sort">Sort\u0020</string>
</resources>
