<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navAllNote"
            android:icon="@drawable/ic_note"
            android:title="@string/menu_item_note" />
        <item
            android:id="@+id/navRemindNote"
            android:icon="@drawable/ic_alarm"
            android:title="@string/menu_item_remind" />
        <item
            android:icon="@drawable/ic_add"
            android:title="@string/menu_item_label" />
        <item
            android:id="@+id/navItemTrash"
            android:icon="@drawable/ic_trash"
            android:title="@string/menu_item_trash" />
    </group>
</menu>
