<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@dimen/dp_320">

    <TextView
        android:id="@+id/textTitleCreateNoteDialog"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/border_bottom_blue"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_10"
        android:text="@string/text_create_note"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/sp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCreateTextNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_gray"
        android:drawableStart="@drawable/ic_text_black_24dp"
        android:drawablePadding="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:text="@string/button_text_note"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitleCreateNoteDialog" />

    <Button
        android:id="@+id/buttonCreateToDoNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom_gray"
        android:drawableStart="@drawable/ic_check_box_black_24dp"
        android:drawablePadding="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:text="@string/button_to_do_note"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonCreateTextNote" />

</androidx.constraintlayout.widget.ConstraintLayout>
