<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textTitleLabelDialog"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/border_bottom_blue"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_10"
        android:text="@string/option_menu_item_label"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@id/textAddNewLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAddNewLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_add"
        android:drawablePadding="@dimen/dp_1"
        android:paddingStart="@dimen/dp_7"
        android:paddingTop="@dimen/dp_10"
        android:text="@string/button_new_label"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@id/recyclerLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitleLabelDialog"
        tools:ignore="RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerLabel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_400"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_10"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/textSaveLabelDialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAddNewLabel" />

    <TextView
        android:id="@+id/textSaveLabelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/button_save"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerLabel" />

    <TextView
        android:id="@+id/textCancelLabelDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/button_cancel"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textSaveLabelDialog"
        app:layout_constraintTop_toBottomOf="@id/recyclerLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
